# COM-Companion-Of-Master

./: .gitattributes  .gitignore  COM_IDE_Roadmap.docx  COM_IDE_Roadmap.md  COM_IDE_Roadmap_v2.docx  Deck.pptx  E_PLUS_DICTIONARY.md  GOLDEN_BENCHMARK.md  GOLDEN_BENCHMARK.py  GOLDEN_STANDARD.md  GOLDEN_STANDARD_REPOSITORY.md  Inventory.xlsx  MIGRATION_PLAN_V4.md  Modelfile  PHASE1_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  ParallelTest1.xlsx  README.md  RUN_INSTRUCTIONS.md  SIGNAL_TRACE_ARCHITECTURE.md  STRUCTURE.md  Sales.xlsx  TestReport.xlsx  V4_MIGRATION_COMPLETE.md  benchmark.py  benchmark_results.json  benchmark_specialists.py  benchmark_v3_local.py  com_chat.py  com_engine.py  com_ide_roadmap.js  com_mascot.py  com_mov_2d.gd  com_terminal.py  config.py  eplus_compiler.py  eplus_compiler_v4.py  floating_llm.py  generate_eplus_doc.js  golden_benchmark.py  (+12 more)
.cache/: cache.db
artifacts/: com_output.gd
benchmark and test review of V3/: COM-MASTER (Review).txt  COM_PR_benchmark_v3.html
benchmark test and Review/: COM_merge _to_main decision.html
benchmark_test_dir/: doc3.md
benchmark_test_dir2/: doc1.md  doc2.md
com_companion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
com_ide/: eno_ast.py  executor.py  lexer.py  llm_analyzer.py  logger.py  main.py  parser.py  signal_generator.py
com_output/: BenchDeck.pptx  BenchDeck_20260430_034132_427215.pptx  BenchDeck_20260430_034226_387972.pptx  BenchTest.xlsx  BenchTest_20260430_034132_325337.xlsx  BenchTest_20260430_034226_247307.xlsx  Deck.pptx  E+_Official_Dictionary_v2.docx  MOV.gd  (+15 more)
(+152 files in other folders)
