[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "com-companion"
version = "4.0.0"
description = "COM — Companion of Master, local-first signal-of-thought assistant"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "fpdf2>=2.7",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "utils*", "frontend*"]
